--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,6 @@
-VITE_NODE_ENV=development
-VITE_BASE_ENDPOINT=http://localhost:4000
+VITE_NODE_ENV=local
+VITE_BASE_ENDPOINT=http://localhost:5001
+BASE_ENDPOINT=api/v1
 VITE_CLIENT_ENDPOINT=http://localhost:3000
-VITE_STRIPE_KEY=
+VITE_STRIPE_KEY=vite_key
 VITE_ELASTIC_APM_SERVER=http://localhost:8200
